Updating content, minor formatting.

--- a/pages/Part5.html
+++ b/pages/Part5.html
@@ -123,6 +123,12 @@
         </tr>
     </table>
     
+    <h3>Lecture 6 by Daniel Gaudreault</h3>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2MNo1gwdvWA?start=189" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+    encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     <h2>Unit 5 Section 2: SQL as a Data Maninpulation Language (DML)</h2>
 
     <p>
@@ -312,6 +318,12 @@
             taken to keep it synchronized with its associated base tables.
         </dd>
     </dl>
+
+    <h3>Lecture 7 by Daniel Gaudreault</h3>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Bo4G9hUnv0U?start=149" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+    encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <h2>Unit 5 Section 3: Advanced SQL and Data Control Commands</h2>
 
@@ -561,6 +573,12 @@
 
         </tr>
     </table>
+
+    <h3>Lecture 12 by Daniel Gaudreault</h3>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ww8A89PDyV4?start=77" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+    encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <dl>
         <dt>Triggers</dt>
