Adding Part8.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 		<li><h2>
 			<a href="pages/Part7.html">Introduction to Data Warehousing</a>
 		</h2></li>
+		<li><h2>
+			<a href="pages/Part8.html">Data Quality and Database Administration</a>
+		</h2></li>
 	</ol>
 
 	<footer><a href="pages/Citations.html">Citations</a></footer>
